lib/haskell/natural4/src/TextuaL4/ParTextuaL.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from TextuaL4/ParTextuaL.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pRule -> Rule                               (0)
	Double -> L_doubl                                  (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Token -> L_Token                                   (4)
	Rule -> 'DECLARE' IsA Fields                       (5)
	Rule -> 'GIVEN' ListIsA Rule                       (6)
	Rule -> 'EVERY' BoolStruct Deontic BoolStruct      (7)
	Rule -> 'EVERY' BoolStruct Who Deontic BoolStruct   (8)
	Rule -> 'EVERY' BoolStruct Who InlineHornlike Deontic BoolStruct   (9)
	Rule -> Text 'MEANS' BoolStruct                    (10)
	Rule -> 'DECIDE' RelationalPredicate               (11)
	Rule -> 'DECIDE' RelationalPredicate 'IF' BoolStruct   (12)
	Rule -> 'GIVETH' IsA 'DECIDE' RelationalPredicate   (13)
	Rule -> 'GIVETH' IsA 'DECIDE' RelationalPredicate 'IF' BoolStruct   (14)
	IsA -> Text 'IS' 'A' Text                          (15)
	IsA -> Text                                        (16)
	ListIsA -> IsA                                     (17)
	ListIsA -> IsA ';' ListIsA                         (18)
	Fields -> 'HAS' ListIsA                            (19)
	Fields ->                                          (20)
	Deontic -> 'MUST'                                  (21)
	Deontic -> 'MAY'                                   (22)
	Deontic -> 'SHANT'                                 (23)
	Who -> 'WHO' BoolStruct                            (24)
	InlineHornlike -> 'MEANS' BoolStruct               (25)
	RelationalPredicate -> ListMTExpr                  (26)
	RelationalPredicate -> ListMTExpr RPRel BoolStruct   (27)
	MTExpr -> Text                                     (28)
	MTExpr -> Integer                                  (29)
	MTExpr -> Double                                   (30)
	MTExpr -> Bool                                     (31)
	Bool -> 'True'                                     (32)
	Bool -> 'False'                                    (33)
	Text -> String                                     (34)
	Text -> Token                                      (35)
	ListMTExpr -> MTExpr                               (36)
	ListMTExpr -> MTExpr ListMTExpr                    (37)
	BoolStruct -> 'ANY' '(' ListBoolStruct ')'         (38)
	BoolStruct -> Text 'ANY' '(' ListBoolStruct ')' Text   (39)
	BoolStruct -> Text 'ANY' '(' ListBoolStruct ')'    (40)
	BoolStruct -> 'ALL' '(' ListBoolStruct ')'         (41)
	BoolStruct -> Text 'ALL' '(' ListBoolStruct ')'    (42)
	BoolStruct -> Text 'ALL' '(' ListBoolStruct ')' Text   (43)
	BoolStruct -> 'NOT' BoolStruct                     (44)
	BoolStruct -> RelationalPredicate                  (45)
	ListBoolStruct -> BoolStruct                       (46)
	ListBoolStruct -> BoolStruct ',' ListBoolStruct    (47)
	RPRel -> 'IS'                                      (48)
	RPRel -> 'HAS'                                     (49)
	RPRel -> 'EQUALS'                                  (50)
	RPRel -> '<'                                       (51)
	RPRel -> '<='                                      (52)
	RPRel -> '>'                                       (53)
	RPRel -> '>='                                      (54)
	RPRel -> 'IN'                                      (55)
	RPRel -> 'NOT' 'IN'                                (56)
	RPRel -> 'NOT'                                     (57)
	RPRel -> 'AND'                                     (58)
	RPRel -> 'OR'                                      (59)
	RPRel -> 'SUM'                                     (60)
	RPRel -> 'PRODUCT'                                 (61)
	RPRel -> 'MINUS'                                   (62)
	RPRel -> 'DIVIDE'                                  (63)
	RPRel -> 'MODULO'                                  (64)
	RPRel -> 'SUBJECT' 'TO'                            (65)
	RPRel -> 'MIN'                                     (66)
	RPRel -> 'MAX'                                     (67)
	RPRel -> 'MAP'                                     (68)
	RPRel -> TComparison                               (69)
	TComparison -> 'BEFORE'                            (70)
	TComparison -> 'AFTER'                             (71)
	TComparison -> 'BY'                                (72)
	TComparison -> 'ON'                                (73)
	TComparison -> 'ABOUT'                             (74)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	';'            { PT _ (TS _ 4) }
	'<'            { PT _ (TS _ 5) }
	'<='           { PT _ (TS _ 6) }
	'>'            { PT _ (TS _ 7) }
	'>='           { PT _ (TS _ 8) }
	'A'            { PT _ (TS _ 9) }
	'ABOUT'        { PT _ (TS _ 10) }
	'AFTER'        { PT _ (TS _ 11) }
	'ALL'          { PT _ (TS _ 12) }
	'AND'          { PT _ (TS _ 13) }
	'ANY'          { PT _ (TS _ 14) }
	'BEFORE'       { PT _ (TS _ 15) }
	'BY'           { PT _ (TS _ 16) }
	'DECIDE'       { PT _ (TS _ 17) }
	'DECLARE'      { PT _ (TS _ 18) }
	'DIVIDE'       { PT _ (TS _ 19) }
	'EQUALS'       { PT _ (TS _ 20) }
	'EVERY'        { PT _ (TS _ 21) }
	'False'        { PT _ (TS _ 22) }
	'GIVEN'        { PT _ (TS _ 23) }
	'GIVETH'       { PT _ (TS _ 24) }
	'HAS'          { PT _ (TS _ 25) }
	'IF'           { PT _ (TS _ 26) }
	'IN'           { PT _ (TS _ 27) }
	'IS'           { PT _ (TS _ 28) }
	'MAP'          { PT _ (TS _ 29) }
	'MAX'          { PT _ (TS _ 30) }
	'MAY'          { PT _ (TS _ 31) }
	'MEANS'        { PT _ (TS _ 32) }
	'MIN'          { PT _ (TS _ 33) }
	'MINUS'        { PT _ (TS _ 34) }
	'MODULO'       { PT _ (TS _ 35) }
	'MUST'         { PT _ (TS _ 36) }
	'NOT'          { PT _ (TS _ 37) }
	'ON'           { PT _ (TS _ 38) }
	'OR'           { PT _ (TS _ 39) }
	'PRODUCT'      { PT _ (TS _ 40) }
	'SHANT'        { PT _ (TS _ 41) }
	'SUBJECT'      { PT _ (TS _ 42) }
	'SUM'          { PT _ (TS _ 43) }
	'TO'           { PT _ (TS _ 44) }
	'True'         { PT _ (TS _ 45) }
	'WHO'          { PT _ (TS _ 46) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_Token        { PT _ (T_Token $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pRule    rule  0
	Double          rule  1
	Integer         rule  2
	String          rule  3
	Token           rule  4
	Rule            rules 5, 6, 7, 8, 9, 10, 11, 12, 13, 14
	IsA             rules 15, 16
	ListIsA         rules 17, 18
	Fields          rules 19, 20
	Deontic         rules 21, 22, 23
	Who             rule  24
	InlineHornlike  rule  25
	RelationalPredicate rules 26, 27
	MTExpr          rules 28, 29, 30, 31
	Bool            rules 32, 33
	Text            rules 34, 35
	ListMTExpr      rules 36, 37
	BoolStruct      rules 38, 39, 40, 41, 42, 43, 44, 45
	ListBoolStruct  rules 46, 47
	RPRel           rules 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69
	TComparison     rules 70, 71, 72, 73, 74

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pRule -> . Rule                              (rule 0)

	'DECIDE'       shift, and enter state 7
	'DECLARE'      shift, and enter state 8
	'EVERY'        shift, and enter state 9
	'GIVEN'        shift, and enter state 10
	'GIVETH'       shift, and enter state 11
	L_quoted       shift, and enter state 12
	L_Token        shift, and enter state 13

	String         goto state 3
	Token          goto state 4
	Rule           goto state 5
	Text           goto state 6

State 1

	Double -> . L_doubl                                 (rule 1)

	L_doubl        shift, and enter state 2


State 2

	Double -> L_doubl .                                 (rule 1)

	')'            reduce using rule 1
	','            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'ABOUT'        reduce using rule 1
	'AFTER'        reduce using rule 1
	'AND'          reduce using rule 1
	'BEFORE'       reduce using rule 1
	'BY'           reduce using rule 1
	'DIVIDE'       reduce using rule 1
	'EQUALS'       reduce using rule 1
	'False'        reduce using rule 1
	'HAS'          reduce using rule 1
	'IF'           reduce using rule 1
	'IN'           reduce using rule 1
	'IS'           reduce using rule 1
	'MAP'          reduce using rule 1
	'MAX'          reduce using rule 1
	'MAY'          reduce using rule 1
	'MEANS'        reduce using rule 1
	'MIN'          reduce using rule 1
	'MINUS'        reduce using rule 1
	'MODULO'       reduce using rule 1
	'MUST'         reduce using rule 1
	'NOT'          reduce using rule 1
	'ON'           reduce using rule 1
	'OR'           reduce using rule 1
	'PRODUCT'      reduce using rule 1
	'SHANT'        reduce using rule 1
	'SUBJECT'      reduce using rule 1
	'SUM'          reduce using rule 1
	'True'         reduce using rule 1
	'WHO'          reduce using rule 1
	L_doubl        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1
	L_Token        reduce using rule 1
	%eof           reduce using rule 1


State 3

	Text -> String .                                    (rule 34)

	')'            reduce using rule 34
	','            reduce using rule 34
	';'            reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	'ABOUT'        reduce using rule 34
	'AFTER'        reduce using rule 34
	'ALL'          reduce using rule 34
	'AND'          reduce using rule 34
	'ANY'          reduce using rule 34
	'BEFORE'       reduce using rule 34
	'BY'           reduce using rule 34
	'DECIDE'       reduce using rule 34
	'DECLARE'      reduce using rule 34
	'DIVIDE'       reduce using rule 34
	'EQUALS'       reduce using rule 34
	'EVERY'        reduce using rule 34
	'False'        reduce using rule 34
	'GIVEN'        reduce using rule 34
	'GIVETH'       reduce using rule 34
	'HAS'          reduce using rule 34
	'IF'           reduce using rule 34
	'IN'           reduce using rule 34
	'IS'           reduce using rule 34
	'MAP'          reduce using rule 34
	'MAX'          reduce using rule 34
	'MAY'          reduce using rule 34
	'MEANS'        reduce using rule 34
	'MIN'          reduce using rule 34
	'MINUS'        reduce using rule 34
	'MODULO'       reduce using rule 34
	'MUST'         reduce using rule 34
	'NOT'          reduce using rule 34
	'ON'           reduce using rule 34
	'OR'           reduce using rule 34
	'PRODUCT'      reduce using rule 34
	'SHANT'        reduce using rule 34
	'SUBJECT'      reduce using rule 34
	'SUM'          reduce using rule 34
	'True'         reduce using rule 34
	'WHO'          reduce using rule 34
	L_doubl        reduce using rule 34
	L_integ        reduce using rule 34
	L_quoted       reduce using rule 34
	L_Token        reduce using rule 34
	%eof           reduce using rule 34


State 4

	Text -> Token .                                     (rule 35)

	')'            reduce using rule 35
	','            reduce using rule 35
	';'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'ABOUT'        reduce using rule 35
	'AFTER'        reduce using rule 35
	'ALL'          reduce using rule 35
	'AND'          reduce using rule 35
	'ANY'          reduce using rule 35
	'BEFORE'       reduce using rule 35
	'BY'           reduce using rule 35
	'DECIDE'       reduce using rule 35
	'DECLARE'      reduce using rule 35
	'DIVIDE'       reduce using rule 35
	'EQUALS'       reduce using rule 35
	'EVERY'        reduce using rule 35
	'False'        reduce using rule 35
	'GIVEN'        reduce using rule 35
	'GIVETH'       reduce using rule 35
	'HAS'          reduce using rule 35
	'IF'           reduce using rule 35
	'IN'           reduce using rule 35
	'IS'           reduce using rule 35
	'MAP'          reduce using rule 35
	'MAX'          reduce using rule 35
	'MAY'          reduce using rule 35
	'MEANS'        reduce using rule 35
	'MIN'          reduce using rule 35
	'MINUS'        reduce using rule 35
	'MODULO'       reduce using rule 35
	'MUST'         reduce using rule 35
	'NOT'          reduce using rule 35
	'ON'           reduce using rule 35
	'OR'           reduce using rule 35
	'PRODUCT'      reduce using rule 35
	'SHANT'        reduce using rule 35
	'SUBJECT'      reduce using rule 35
	'SUM'          reduce using rule 35
	'True'         reduce using rule 35
	'WHO'          reduce using rule 35
	L_doubl        reduce using rule 35
	L_integ        reduce using rule 35
	L_quoted       reduce using rule 35
	L_Token        reduce using rule 35
	%eof           reduce using rule 35


State 5

	%start_pRule -> Rule .                              (rule 0)

	%eof           accept


State 6

	Rule -> Text . 'MEANS' BoolStruct                   (rule 10)

	'MEANS'        shift, and enter state 35


State 7

	Rule -> 'DECIDE' . RelationalPredicate              (rule 11)
	Rule -> 'DECIDE' . RelationalPredicate 'IF' BoolStruct    (rule 12)

	'False'        shift, and enter state 28
	'True'         shift, and enter state 30
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 12
	L_Token        shift, and enter state 13

	Double         goto state 18
	Integer        goto state 19
	String         goto state 3
	Token          goto state 4
	RelationalPredicategoto state 33
	MTExpr         goto state 21
	Bool           goto state 22
	Text           goto state 34
	ListMTExpr     goto state 24

State 8

	Rule -> 'DECLARE' . IsA Fields                      (rule 5)

	L_quoted       shift, and enter state 12
	L_Token        shift, and enter state 13

	String         goto state 3
	Token          goto state 4
	IsA            goto state 32
	Text           goto state 15

State 9

	Rule -> 'EVERY' . BoolStruct Deontic BoolStruct     (rule 7)
	Rule -> 'EVERY' . BoolStruct Who Deontic BoolStruct    (rule 8)
	Rule -> 'EVERY' . BoolStruct Who InlineHornlike Deontic BoolStruct    (rule 9)

	'ALL'          shift, and enter state 26
	'ANY'          shift, and enter state 27
	'False'        shift, and enter state 28
	'NOT'          shift, and enter state 29
	'True'         shift, and enter state 30
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 12
	L_Token        shift, and enter state 13

	Double         goto state 18
	Integer        goto state 19
	String         goto state 3
	Token          goto state 4
	RelationalPredicategoto state 20
	MTExpr         goto state 21
	Bool           goto state 22
	Text           goto state 23
	ListMTExpr     goto state 24
	BoolStruct     goto state 25

State 10

	Rule -> 'GIVEN' . ListIsA Rule                      (rule 6)

	L_quoted       shift, and enter state 12
	L_Token        shift, and enter state 13

	String         goto state 3
	Token          goto state 4
	IsA            goto state 16
	ListIsA        goto state 17
	Text           goto state 15

State 11

	Rule -> 'GIVETH' . IsA 'DECIDE' RelationalPredicate    (rule 13)
	Rule -> 'GIVETH' . IsA 'DECIDE' RelationalPredicate 'IF' BoolStruct    (rule 14)

	L_quoted       shift, and enter state 12
	L_Token        shift, and enter state 13

	String         goto state 3
	Token          goto state 4
	IsA            goto state 14
	Text           goto state 15

State 12

	String -> L_quoted .                                (rule 3)

	')'            reduce using rule 3
	','            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'ABOUT'        reduce using rule 3
	'AFTER'        reduce using rule 3
	'ALL'          reduce using rule 3
	'AND'          reduce using rule 3
	'ANY'          reduce using rule 3
	'BEFORE'       reduce using rule 3
	'BY'           reduce using rule 3
	'DECIDE'       reduce using rule 3
	'DECLARE'      reduce using rule 3
	'DIVIDE'       reduce using rule 3
	'EQUALS'       reduce using rule 3
	'EVERY'        reduce using rule 3
	'False'        reduce using rule 3
	'GIVEN'        reduce using rule 3
	'GIVETH'       reduce using rule 3
	'HAS'          reduce using rule 3
	'IF'           reduce using rule 3
	'IN'           reduce using rule 3
	'IS'           reduce using rule 3
	'MAP'          reduce using rule 3
	'MAX'          reduce using rule 3
	'MAY'          reduce using rule 3
	'MEANS'        reduce using rule 3
	'MIN'          reduce using rule 3
	'MINUS'        reduce using rule 3
	'MODULO'       reduce using rule 3
	'MUST'         reduce using rule 3
	'NOT'          reduce using rule 3
	'ON'           reduce using rule 3
	'OR'           reduce using rule 3
	'PRODUCT'      reduce using rule 3
	'SHANT'        reduce using rule 3
	'SUBJECT'      reduce using rule 3
	'SUM'          reduce using rule 3
	'True'         reduce using rule 3
	'WHO'          reduce using rule 3
	L_doubl        reduce using rule 3
	L_integ        reduce using rule 3
	L_quoted       reduce using rule 3
	L_Token        reduce using rule 3
	%eof           reduce using rule 3


State 13

	Token -> L_Token .                                  (rule 4)

	')'            reduce using rule 4
	','            reduce using rule 4
	';'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	'ABOUT'        reduce using rule 4
	'AFTER'        reduce using rule 4
	'ALL'          reduce using rule 4
	'AND'          reduce using rule 4
	'ANY'          reduce using rule 4
	'BEFORE'       reduce using rule 4
	'BY'           reduce using rule 4
	'DECIDE'       reduce using rule 4
	'DECLARE'      reduce using rule 4
	'DIVIDE'       reduce using rule 4
	'EQUALS'       reduce using rule 4
	'EVERY'        reduce using rule 4
	'False'        reduce using rule 4
	'GIVEN'        reduce using rule 4
	'GIVETH'       reduce using rule 4
	'HAS'          reduce using rule 4
	'IF'           reduce using rule 4
	'IN'           reduce using rule 4
	'IS'           reduce using rule 4
	'MAP'          reduce using rule 4
	'MAX'          reduce using rule 4
	'MAY'          reduce using rule 4
	'MEANS'        reduce using rule 4
	'MIN'          reduce using rule 4
	'MINUS'        reduce using rule 4
	'MODULO'       reduce using rule 4
	'MUST'         reduce using rule 4
	'NOT'          reduce using rule 4
	'ON'           reduce using rule 4
	'OR'           reduce using rule 4
	'PRODUCT'      reduce using rule 4
	'SHANT'        reduce using rule 4
	'SUBJECT'      reduce using rule 4
	'SUM'          reduce using rule 4
	'True'         reduce using rule 4
	'WHO'          reduce using rule 4
	L_doubl        reduce using rule 4
	L_integ        reduce using rule 4
	L_quoted       reduce using rule 4
	L_Token        reduce using rule 4
	%eof           reduce using rule 4


State 14

	Rule -> 'GIVETH' IsA . 'DECIDE' RelationalPredicate    (rule 13)
	Rule -> 'GIVETH' IsA . 'DECIDE' RelationalPredicate 'IF' BoolStruct    (rule 14)

	'DECIDE'       shift, and enter state 82


State 15

	IsA -> Text . 'IS' 'A' Text                         (rule 15)
	IsA -> Text .                                       (rule 16)

	';'            reduce using rule 16
	'DECIDE'       reduce using rule 16
	'DECLARE'      reduce using rule 16
	'EVERY'        reduce using rule 16
	'GIVEN'        reduce using rule 16
	'GIVETH'       reduce using rule 16
	'HAS'          reduce using rule 16
	'IS'           shift, and enter state 81
	L_quoted       reduce using rule 16
	L_Token        reduce using rule 16
	%eof           reduce using rule 16


State 16

	ListIsA -> IsA .                                    (rule 17)
	ListIsA -> IsA . ';' ListIsA                        (rule 18)

	';'            shift, and enter state 80
	'DECIDE'       reduce using rule 17
	'DECLARE'      reduce using rule 17
	'EVERY'        reduce using rule 17
	'GIVEN'        reduce using rule 17
	'GIVETH'       reduce using rule 17
	L_quoted       reduce using rule 17
	L_Token        reduce using rule 17
	%eof           reduce using rule 17


State 17

	Rule -> 'GIVEN' ListIsA . Rule                      (rule 6)

	'DECIDE'       shift, and enter state 7
	'DECLARE'      shift, and enter state 8
	'EVERY'        shift, and enter state 9
	'GIVEN'        shift, and enter state 10
	'GIVETH'       shift, and enter state 11
	L_quoted       shift, and enter state 12
	L_Token        shift, and enter state 13

	String         goto state 3
	Token          goto state 4
	Rule           goto state 79
	Text           goto state 6

State 18

	MTExpr -> Double .                                  (rule 30)
